Background texture is not visible when Alpha Composite is enabled

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • internal
    • Affects Version/s: internal
    • Component/s: client-libs
    • 2d
    • generic
    • os_x

      Run J2DDemo with metal -> Paint tab -> enable Texture and Alpha composite in Global controls.

      Issue is seen in EA2 also.

        1. Metal.png
          Metal.png
          377 kB
        2. OpenGL.png
          OpenGL.png
          734 kB

            Assignee:
            Alexey Ushakov
            Reporter:
            Jayathirth D V
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: