8251033: Background texture is not visible when Alpha Composite is enabled