src/java.desktop/macosx/native/libawt_lwawt/awt/shaders.metal
@@ -291,7 +291,7 @@ fragment half4 frag_txt_grad(GradShaderInOut in [[stage_in]],
     return half4(c.r*renderColor.a,
                  c.g*renderColor.a,
                  c.b*renderColor.a,
-                 c.a*renderColor.a);
+                 c.a*renderColor.a) * uniforms.extraAlpha;
 }
 
 fragment half4 frag_txt_lin_grad(GradShaderInOut in [[stage_in]],
@@ -327,7 +327,7 @@ fragment half4 frag_txt_lin_grad(GradShaderInOut in [[stage_in]],
     return half4(c.r*renderColor.a,
                  c.g*renderColor.a,
                  c.b*renderColor.a,
-                 c.a*renderColor.a);
+                 c.a*renderColor.a) * uniforms.extraAlpha;
 }
 
 fragment half4 frag_txt_rad_grad(GradShaderInOut in [[stage_in]],
@@ -367,7 +367,7 @@ fragment half4 frag_txt_rad_grad(GradShaderInOut in [[stage_in]],
     return half4(c.r*renderColor.a,
                      c.g*renderColor.a,
                      c.b*renderColor.a,
-                     c.a*renderColor.a);
+                     c.a*renderColor.a) * uniforms.extraAlpha;
 }
 
 
@@ -519,7 +519,7 @@ fragment half4 frag_grad(GradShaderInOut in [[stage_in]],
         }
     }
     float4 c = mix(uniforms.color1, uniforms.color2, a);
-    return half4(c);
+    return half4(c) * uniforms.extraAlpha;
 }
 
 // LinGradFrameUniforms
@@ -546,7 +546,7 @@ fragment half4 frag_lin_grad(GradShaderInOut in [[stage_in]],
     }
     a = (a - n*lf)/lf;
     float4 c = mix(uniforms.color[n], uniforms.color[n + 1], a);
-    return half4(c);
+    return half4(c) * uniforms.extraAlpha;
 }
 
 fragment half4 frag_rad_grad(GradShaderInOut in [[stage_in]],
@@ -576,7 +576,7 @@ fragment half4 frag_rad_grad(GradShaderInOut in [[stage_in]],
     }
     a = (a - n*lf)/lf;
     float4 c = mix(uniforms.color[n], uniforms.color[n + 1], a);
-    return half4(c);
+    return half4(c) * uniforms.extraAlpha;
 }
 
 
